// Copyright 2019, Vy-Shane Xie
// Licensed under the Apache License, Version 2.0
//
// Scenarios for end to end tests.

syntax = "proto3";

service UnaryMock {
    rpc Ok (EchoRequest) returns (EchoResponse);
}

service ServerStreamingMock {
    rpc Ok (EchoRequest) returns (stream EchoResponse);
}

service ClientStreamingMock {
    rpc Ok (stream EchoRequest) returns (EchoResponse);
}

service BidirectionalStreamingMock {
    rpc Ok (stream EchoRequest) returns (stream EchoResponse);
}

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}
